# troca-livros-backend

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  tarpaulin-report.html  tarpaulin.toml
postgres/: Dockerfile  docker-entrypoint.sh  init-always.sh  setup.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/docs/: auth_docs.rs  book_docs.rs  book_offered_docs.rs  book_wanted_docs.rs  google_book_docs.rs  mod.rs  trade_docs.rs
src/handlers/: auth_handler.rs  book_handler.rs  book_offered_handler.rs  book_wanted_handler.rs  google_book_handler.rs  mod.rs  trade_handler.rs
src/middleware/: auth_middleware.rs
src/models/: book.rs  mod.rs  trade.rs  user.rs  user_test.rs
src/repositories/: book_repository.rs  books_offered_repository.rs  books_wanted_repository.rs  mod.rs  trade_repository.rs  trade_repository_test.rs  user_repository.rs  user_repository_test.rs
src/routes/: auth_routes.rs  book_offered_routes.rs  book_routes.rs  book_wanted_routes.rs  google_book_routes.rs  mod.rs  trade_routes.rs
src/services/: auth_service.rs  book_offered_service.rs  book_service.rs  book_wanted_service.rs  google_book_service.rs  google_book_service_test.rs  http_service.rs  mod.rs  password_service.rs  password_service_test.rs  test_mocks.rs  (+2 more)
tests/: add_book_offered_test.rs  add_book_wanted_test.rs  auth_login_test.rs  auth_register_test.rs  books_search_test.rs  end_to_end_tests.rs  get_user_books_test.rs  middleware_auth_test.rs  remove_book_offered_test.rs  remove_book_wanted_test.rs  trade_possible_test.rs
(+34 files in other folders)
