[package]
name = "troca-livros-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "troca_livros_api"
path = "src/main.rs"

[[bin]]
name = "troca-livros-api"
path = "src/main.rs"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
argon2 = "0.5.2"
jsonwebtoken = "8.3.0"
thiserror = "1.0.49"
async-trait = "0.1.73"
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] } 
reqwest = { version = "0.12.15", features = ["json"] }
validator = { version = "0.16", features = ["derive"] }
once_cell = "1.17.1"

[dev-dependencies]
mockall = "0.11.4"
reqwest = { version = "0.12.15", features = ["json"] }


[profile.dev]
debug = true
